--- a/src/template/modal-cocktails.hbs
+++ b/src/template/modal-cocktails.hbs
@@ -11,7 +11,8 @@
     <h3 class='modal-first__title-second ingridients'>INGREDIENTS</h3>
     <span class='modal-first__span'>Per cocktail</span>
     <ul class='modal-first__list list'>
-      <li class='modal-first__item'>Ice</li>
+      {{#each strIngredient}}<li class='modal-first__item'>{{this}}</li>
+      {{/each}}
     </ul>
   </div>
   <button type='button' class='modal-first__button'>Add to favorite</button>
@@ -22,6 +23,6 @@
     height='32px'
     data-modal-close
   >
-    <use href='../images/catalogue/close.svg'></use>
+    <use href='http://localhost:1234/close.svg'></use>
   </svg>
 </div>
