--- a/src/template/modal-cocktails.hbs
+++ b/src/template/modal-cocktails.hbs
@@ -17,12 +17,12 @@
   </div>
   <button type='button' class='modal-first__button'>Add to favorite</button>
 
-  <svg
+  <img
+  src="http://localhost:1234/close.svg"
     class='modal-first__icon-close'
     width='32px'
     height='32px'
     data-modal-close
   >
-    <use href='http://localhost:1234/close.svg'></use>
-  </svg>
+  </img>
 </div>
