--- a/src/sass/layouts/_catalogue.scss
+++ b/src/sass/layouts/_catalogue.scss
@@ -7,6 +7,7 @@
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
+  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
   min-height: auto;
 
   background-color: $colorFontQuaternary;
@@ -321,4 +322,7 @@
   height: 100%;
 
   background: rgba(0, 0, 0, 0.2);
+
+  transition: opacity 750ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 750ms cubic-bezier(0.4, 0, 0.2, 1);
 }
