--- a/src/template/modal-ingred.hbs
+++ b/src/template/modal-ingred.hbs
@@ -1,30 +1,24 @@
 <button type="button" class="campari-btn__close red">
-    <svg class="modal-first__icon-close" width="32px" height="32px">
+    {{!-- <svg class="modal-first__icon-close" width="32px" height="32px">
         <use href="./images/header/header-sprite.svg#icon-clarity_close-line"></use>
-    </svg>
+    </svg> --}}
 </button>
 <div class="campari-titles__border">
-    <h2 class="campari-title">Campari</h2>
-    <h3 class="campari-title__min">Liqueur</h3>
+    <h2 class="campari-title">{{strIngredient}}</h2>
+    <h3 class="campari-title__min">{{strType}}</h3>
 </div>
 <div class="campari-text__container">
     <p class="campari-text">
-        <b class="campari-text__b">Campari </b>is an Italian alcoholic liqueur,
-        considered an apéritif (20.5%, 21%, 24%, 25%, or 28.5% ABV, depending on
-        the country in which it is sold), obtained from the infusion of herbs
-        and fruit (including chinotto and cascarilla) in alcohol and water. It
-        is a bitters, characterised by its dark red colour.
+        <b class="campari-text__b">{{strDescription}}
     </p>
     <ul class="list campari-list">
         <li class="campari-list__item">
-            <span class="campari-list__itemb">✶ </span>Type: Bitters
+            <span class="campari-list__itemb">✶ </span>Type: {{strType}}
         </li>
-        <li class="campari-list__item">
-            <span class="campari-list__itemb">✶ </span>Country of origin: Italy
-        </li>
+
         <li class="campari-list__item">
             <span class="campari-list__itemb">✶ </span>Alcohol by volume:
-            20.5–28.5%
+            {{strABV}}%
         </li>
         <li class="campari-list__item">
             <span class="campari-list__itemb">✶ </span>Flavour: Bitter, spicy and
